# Refuse-Classification-Machine

./: .gitignore  =0.8.1  README.md  head_camera.yaml
devel/: .catkin  .rosinstall  setup.sh
devel/include/table_arm/: arm_init_position.h  arm_target.h  arm_target_position.h  color_ik_result.h  position_color.h
devel/include/wheeltec_tracker_pkg/: centroid.h  color.h  gesture.h
devel/include/yolo_new/: BoundingBox.h  BoundingBoxes.h  Flag.h  Serial_RT.h  arm_init_position.h  arm_target.h  arm_target_position.h  color_ik_result_new.h  position_color.h
devel/include/yolov5_ros_msgs/: BoundingBox.h  BoundingBoxes.h
devel/lib/pkgconfig/: arm_demo.pc  table_arm.pc  table_streeing_arm.pc  table_streeing_arm_moveit_config.pc  web_video_server.pc  wheeltec_arm_rc.pc  wheeltec_tracker_pkg.pc  (+4 more)
src/arm_demo/: CMakeLists.txt  package.xml
src/table_arm/: CMakeLists.txt
src/table_streeing_arm/: CMakeLists.txt  package.xml
src/table_streeing_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/wheeltec_arm_rc/: CMakeLists.txt
src/wheeltec_tracker_pkg/: CMakeLists.txt
src/wheeltec_tracker_pkg/config/: track.yaml
src/wheeltec_tracker_pkg/launch/: color_tracking.launch  face_detector.launch  face_tracking.launch  gesture_recognition.launch
src/wheeltec_tracker_pkg/msg/: centroid.msg  color.msg  gesture.msg
src/wheeltec_tracker_pkg/scripts/: color_detector.py  face_decetor.py  face_tracking.py  gesture_recognition.py  visualTracker.py
src/wheeltec_tracker_pkg/src/: face_tracker_node.cpp  gesture_recognition.cpp
src/yolo_new/: CMakeLists.txt
(+270 files in other folders)
